# agh-operating-systems

./: .gitignore  CMakeLists.txt
GeislerWojciech/cw01/zad1/: stringlib.c  stringlib.h
GeislerWojciech/cw01/zad2/: main.c
lab1/: CMakeLists.txt
lab1/GeislerWojciech/cw01/zad1/: Makefile  chararray.c  chararray.h  stringlib.c  stringlib.h
lab1/GeislerWojciech/cw01/zad2/: Makefile  chararray.h  main.c  raport2.txt
lab1/GeislerWojciech/cw01/zad3/: Makefile  results3a.txt  results3b.txt
lab1/GeislerWojciech/cw01/zad3a/: chararray.c
lab10/: CMakeLists.txt
lab10/GeislerWojciech/zad1/: Makefile  client.c  common.h  server.c
lab10/GeislerWojciech/zad2/: client.c  common.h  server.c
lab2/: CMakeLists.txt  jupyter.html
lab2/GeislerWojciech/cw02/zad1/: Makefile  main.c  test.sh  wyniki.txt
lab2/GeislerWojciech/cw02/zad2/: Makefile  bynftw.c  bystat.c  main.c
lab2/GeislerWojciech/cw02/zad2/example/: linked
lab2/jupyter/: Untitled.ipynb  copy.txt  copy1.txt  copy2.txt  copy3.txt  times.txt  wyniki.txt
lab2/jupyter/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
lab3/: CMakeLists.txt
lab3/GeislerWojciech/cw01/zad1/: Makefile  bigger.out  equal.out  greater.out  main  main.c  out.out  proc.out  smaller.out
lab3/GeislerWojciech/cw03/zad1/: Makefile  bigger.out  main.c
lab3/GeislerWojciech/cw03/zad2/: Makefile  batch.in  main.c  wyniki.txt
lab3/GeislerWojciech/cw03/zad3/: Makefile  batch.in  big.c  long.c  main.c
lab3/GeislerWojciech/cw03/zad3a/: Makefile  batch.in  main.c  wyniki.txt
lab3/GeislerWojciech/cw03/zad3b/: Makefile  big  big.batch  big.c  long  long.batch  long.c  main.c  wyniki.txt
lab4/: CMakeLists.txt
lab4/GeislerWojciech/cw04/zad1/: Makefile  dater.sh  main.c
lab4/GeislerWojciech/cw04/zad1a/: Makefile  main.c
lab4/GeislerWojciech/cw04/zad1b/: Makefile  dater.sh  main.c
lab4/GeislerWojciech/cw04/zad2/: Makefile  child.c  main.c
lab4/GeislerWojciech/cw04/zad3/: Makefile  child.c  main.c
lab5/: CMakeLists.txt
lab5/GeislerWojciech/cw05/zad1/: Makefile  (+2 more)
lab6/: CMakeLists.txt
lab6/GeislerWojciech/cw06/zad1/: Makefile  client.c  common.h  server.c
lab6/GeislerWojciech/cw06/zad2/: Makefile  client  client.c  common.h  server.c  test.in
lab7/: CMakeLists.txt
lab7/GeislerWojciech/cw07/zad1/: Makefile  a.out  barber  barber.c  client  client.c  common.c  common.h
lab7/GeislerWojciech/cw07/zad2/: Makefile  barber.c  client.c  common.c  common.h
lab8/: CMakeLists.txt
lab9/: CMakeLists.txt
(+21 files in other folders)
