cmake_minimum_required(VERSION 3.10)
project(lab4 C)

set(CMAKE_C_STANDARD 99)

add_executable(zad1a GeislerWojciech/cw04/zad1a/main.c)
add_executable(zad1b GeislerWojciech/cw04/zad1b/main.c)
add_executable(zad2 GeislerWojciech/cw04/zad2/main.c)
add_executable(child2 GeislerWojciech/cw04/zad2/child.c)
add_executable(zad3 GeislerWojciech/cw04/zad3/main.c)
add_executable(child3 GeislerWojciech/cw04/zad3/child.c)
